apps/makerspace-spaceapi/src/k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: makerspace-spaceapi
  namespace: makerspace-spaceapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: makerspace-spaceapi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: makerspace-spaceapi
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
    spec:
      containers:
        - name: makerspace-spaceapi
          image: ghcr.io/dannixon/makerspace-spaceapi:64b6a319cf5722200a125b8ec75e5beb9d58e702
          livenessProbe:
            httpGet:
              path: /alive
              port: metrics
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: metrics
            initialDelaySeconds: 3
            periodSeconds: 3
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: metrics
              containerPort: 9090
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: http
  namespace: makerspace-spaceapi
spec:
  selector:
    app.kubernetes.io/name: makerspace-spaceapi
  ports:
    - port: 8080
      protocol: TCP
      targetPort: http
