apps/makerspace-spaceapi/src/k8s/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: cors-header
  namespace: makerspace-spaceapi
spec:
  headers:
    customResponseHeaders:
      Access-Control-Allow-Origin: "*"

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http
  namespace: makerspace-spaceapi
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`spaceapi.makerspace.org.uk`)
      middlewares:
        - name: cors-header
      services:
        - Kind: Service
          name: http
          port: 8080

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: https
  namespace: makerspace-spaceapi
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`spaceapi.makerspace.org.uk`)
      middlewares:
        - name: cors-header
      services:
        - Kind: Service
          name: http
          port: 8080
  tls:
    certResolver: letsencrypt
